--- a/SeazonProject/src/main/resources/templates/mypage.html
+++ b/SeazonProject/src/main/resources/templates/mypage.html
@@ -36,7 +36,7 @@
             <!-- </form> -->
             <br>
             <button type="button" class="btn btn-light">개인정보 수정</button>
-            <button type="button" class="btn btn-light">내 여행 관리</button>
+            <button type="button" class="btn btn-light">내 축제 관리</button>
             <button type="button" class="btn btn-light">요리 후기</button>
             <button type="button" class="btn btn-light">댓글</button>
          </div>
