--- a/SeazonProject/src/main/resources/templates/layout.html
+++ b/SeazonProject/src/main/resources/templates/layout.html
@@ -56,7 +56,7 @@
 <script th:src="@{/bootstrap/5.1.0/js/bootstrap.min.js}"></script>
 
 <!-- CSS -->
-<link rel="stylesheet" th:href="@{/css/travel_style.css}">
+<link rel="stylesheet" th:href="@{/css/index_style.css}">
 <link rel="stylesheet" th:href="@{/css/index_style.css}">
 <link rel="stylesheet" th:href="@{/css/login_form_style.css}">
 
