--- a/SeazonProject/src/main/resources/templates/travel_form.html
+++ b/SeazonProject/src/main/resources/templates/travel_form.html
@@ -70,7 +70,7 @@
                     <div class="d-flex gap-2">
 
                         <!-- 지역 -->
-                        <select class="form-select" th:field="*{category}">
+                        <select class="form-select" th:field="*{place}">
                            <option value="">지역 선택</option>
                            <option value="서울">서울</option>
                            <option value="경기도">경기도</option>
